EIDOMNI-370: Fixed code scanning (PMD) warning